demo html title

--- a/sample/localView.html
+++ b/sample/localView.html
@@ -2,7 +2,7 @@
 <html ng-app="application">
 <head>
 	<meta charset="utf-8">
-	<title>Scroller Demo (entire window)</title>
+	<title>Angular-bootstrap-modal-singleton demo</title>
 	<script src="out/angular.js"></script>
 	<script src="out/ui-bootstrap.min.js"></script>
 	<script src="out/ui-bootstrap-tpls.min.js"></script>
